# improv-tonnetz

./: .gitignore  CMakeLists.txt  Makefile  app  build.sh  readme.md  tests
cmake/: Findglm.cmake  Findjuce.cmake  gtest.cmake
include/: Resources.h
src/: CMakeLists.txt  app.cpp  main.cpp  main.h  sinevoice.h  sinewave.h  synth.h  theory.h  tonnetz.cpp  tonnetz.h  tonnetz_test.cpp  types.h
tests/: CMakeLists.txt  tests.cpp
